@@ -24,7 +24,7 @@
 #ifndef MAPNIK_VERSION_HPP
 #define MAPNIK_VERSION_HPP
 
-#define MAPNIK_VERSION 700
+#define MAPNIK_VERSION 701
 
 #endif //MAPNIK_VERSION_HPP
 
